fixing fade out styling and overlap error

--- a/src/components/SectionSkills.css
+++ b/src/components/SectionSkills.css
@@ -11,8 +11,8 @@
   left: 0;
   pointer-events: none;
   background-image: linear-gradient(to bottom,
-                    rgba(240, 240, 240, 0),
-                    rgba(240, 240, 240, 1));
+                    rgba(242, 242, 242, 0),
+                    rgba(242, 242, 242, 1) 90%);
   width: 100%;
   height: 4em;
 }
