--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ code {
 .header-style {
   width: 100%;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
 }
 
 .layout {
